samples/_failures_safe/1761789110_926928_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5a458927.c: In function ‘add_log_entry’:
./samples/SAFE/__tmp_5a458927.c:127:5: error: expected expression at end of input
  127 |     if (!
      |     ^~
./samples/SAFE/__tmp_5a458927.c:127:5: error: expected declaration or statement at end of input
